--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -117,43 +117,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regularization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_L2_regularization_cost(parameters, lambd):\n",
-    "    \"\"\"\n",
-    "    Return L2 regularization term.\n",
-    "    \n",
-    "    Arguments:\n",
-    "    parameters -- python dictionary containing parameters of the model\n",
-    "    lambd -- regularization hyperparameter, scalar\n",
-    "\n",
-    "    Returns:\n",
-    "    cost - value of the regularization term to be used for cost function regularization\n",
-    "    \"\"\"\n",
-    "    m = Y.shape[1]\n",
-    "    W1 = parameters[\"W1\"]\n",
-    "    W2 = parameters[\"W2\"]\n",
-    "    W3 = parameters[\"W3\"]\n",
-    "\n",
-    "    sum_of_squares = np.sum(np.square(W1) + np.sum(np.square(W2)) + np.sum(np.square(W3)))\n",
-    "    L2_regularization_cost = 1/m * lambd/2 * sum_of_squares\n",
-    "    \n",
-    "    return L2_regularization_cost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Mini-batch"
    ]
   },
@@ -482,12 +445,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_L2_regularization_cost(parameters, lambd):\n",
+    "    \"\"\"\n",
+    "    Return L2 regularization term.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing parameters of the model\n",
+    "    lambd -- regularization hyperparameter, scalar\n",
+    "\n",
+    "    Returns:\n",
+    "    cost - value of the regularization term to be used for cost function regularization\n",
+    "    \"\"\"\n",
+    "    m = Y.shape[1]\n",
+    "    L = len(parameters) // 2 # of layers in the network\n",
+    "\n",
+    "    sum_of_squares = 0\n",
+    "    for l in range(L):\n",
+    "        sum_of_squares += np.sum(np.square(parameters[\"W\"+str(l+1)]))\n",
+    "    \n",
+    "    L2_regularization_cost = 1/m * lambd/2 * sum_of_squares\n",
+    "    \n",
+    "    return L2_regularization_cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cost calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 310,
    "metadata": {
     "collapsed": true
    },
@@ -495,7 +494,7 @@
    "source": [
     "def compute_cost(A_last, Y):\n",
     "    \"\"\"\n",
-    "    Implement the cost function with L2 regularization. See formula (2) above.\n",
+    "    Implement the cost function with L2 regularization.\n",
     "    \n",
     "    Arguments:\n",
     "    A_last -- post-activation, output of forward propagation, of shape (output size, number of examples)\n",
@@ -513,6 +512,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def compute_cost_with_regularization(A_last, Y, parameters, lambd=0.01):\n",
+    "    return compute_cost(A_last, Y) + get_L2_regularization_cost(parameters, lambd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test L2 regularizartion\n",
+    "\n",
+    "A_last = np.array([[ 0.40682402,  0.01629284,  0.16722898,  0.10118111,  0.40682402]])\n",
+    "Y = np.array([[1, 1, 0, 1, 0]])\n",
+    "parameters = {'W1': np.array([[ 1.62434536, -0.61175641, -0.52817175],\n",
+    "       [-1.07296862,  0.86540763, -2.3015387 ]]), 'b1': np.array([[ 1.74481176],\n",
+    "       [-0.7612069 ]]), 'W2': np.array([[ 0.3190391 , -0.24937038],\n",
+    "       [ 1.46210794, -2.06014071],\n",
+    "       [-0.3224172 , -0.38405435]]), 'b2': np.array([[ 1.13376944],\n",
+    "       [-1.09989127],\n",
+    "       [-0.17242821]]), 'W3': np.array([[-0.87785842,  0.04221375,  0.58281521]]), 'b3': np.array([[-1.10061918]])}\n",
+    "\n",
+    "cost = compute_cost_with_regularization(A_last, Y, parameters, lambd = 0.1)\n",
+    "assert(cost - (1.60250160476) < 10e-8)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 315,
    "metadata": {
     "collapsed": true
    },
@@ -549,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 316,
    "metadata": {
     "collapsed": true
    },
@@ -576,7 +609,7 @@
     "\n",
     "    for i in range(0, num_iterations):\n",
     "        A_last, caches = forward_propagation(X, parameters)\n",
-    "        cost = compute_cost(A_last, Y)\n",
+    "        cost = compute_cost_with_regularization(A_last, Y, parameters)\n",
     "        grads = backward_propagation(A_last, Y, caches)\n",
     "        parameters = update_parameters(parameters, grads, learning_rate)\n",
     "                \n",
@@ -597,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 317,
    "metadata": {
     "collapsed": true
    },
